replacing sed -i with Perl to work on OSX, added OSX install docs

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -69,4 +69,5 @@ Useful links when configuring the docbook toolchain:
 === With apt-get on Ubuntu ===
 
   sudo apt-get install asciidoc docbook graphviz w3m
+  sudo docbook-register
 
