Upgraded po4a to current trunk.

--- a/src/bin/po4a/README
+++ b/src/bin/po4a/README
@@ -15,8 +15,9 @@ INSTALLATION
 
 To install this module type the following:
 
-   make
-   make install
+   perl Build.PL
+   ./Build
+   ./Build install
 
 
 USE WITHOUT INSTALLATION
