--- a/src/bin/po4a/po/bin/es.po
+++ b/src/bin/po4a/po/bin/es.po
@@ -1,38 +1,32 @@
 # po4a po (po/bin/es.po) translation to Spanish
 # Copyright (C) 2009 Software in the Public Interest
 # This file is distributed under the same license as the po4a package.
-#
 # Changes:
-#   - Initial translation
-#       Jordi Vilalta <jvprat@gmail.com>, 2004, 2006
-#
-#   - Updates
-#       Omar Campagne <ocampagne@gmail.com>, 2009
-#
+# - Initial translation
+# Jordi Vilalta <jvprat@gmail.com>, 2004, 2006
+# - Updates
+# Omar Campagne <ocampagne@gmail.com>, 2009, 2012.
 # Traductores, si no conocen el formato PO, merece la pena leer la
 # de gettext, especialmente las secciones dedicadas a este
 # formato, por ejemplo ejecutando:
-#       info -n '(gettext)PO Files'
-#       info -n '(gettext)Header Entry'
-#
+# info -n '(gettext)PO Files'
+# info -n '(gettext)Header Entry'
 # Equipo de traducción al español, por favor, lean antes de traducir
 # los siguientes documentos:
-#
-#   - El proyecto de traducción de Debian al español
-#     http://www.debian.org/intl/spanish/
-#     especialmente las notas de traducción en
-#     http://www.debian.org/intl/spanish/notas
-#
-#   - La guía de traducción de po's de debconf:
-#     /usr/share/doc/po-debconf/README-trans
-#     o http://www.debian.org/intl/l10n/po-debconf/README-trans
+# - El proyecto de traducción de Debian al español
+# http://www.debian.org/intl/spanish/
+# especialmente las notas de traducción en
+# http://www.debian.org/intl/spanish/notas
+# - La guía de traducción de po's de debconf:
+# /usr/share/doc/po-debconf/README-trans
+# o http://www.debian.org/intl/l10n/po-debconf/README-trans
 # #
 msgid ""
 msgstr ""
 "Project-Id-Version: po4a bin 0.39\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-09-23 22:13+0200\n"
-"PO-Revision-Date: 2010-07-29 09:42+0200\n"
+"PO-Revision-Date: 2012-09-26 21:54+0200\n"
 "Last-Translator: Omar Campagne <ocampagne@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "Language: es\n"
@@ -40,7 +34,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Virtaal 0.5.2\n"
+"X-Generator: Virtaal 0.7.1\n"
 
 #: ../../lib/Locale/Po4a/Chooser.pm:26
 msgid "Need to provide a module name"
@@ -360,7 +354,7 @@ msgid "Begin of a new entry before the end of previous one"
 msgstr "Comienzo de una nueva entrada antes del fin de la anterior."
 
 #: ../../lib/Locale/Po4a/Po.pm:196
-#, fuzzy, perl-format
+#, perl-format
 #| msgid ""
 #| "Invalid value for option 'porefs' ('%s' is not one of 'full', 'noline' or "
 #| "'none')"
@@ -368,8 +362,8 @@ msgid ""
 "Invalid value for option 'porefs' ('%s' is not one of 'full', 'counter', "
 "'noline' or 'none')"
 msgstr ""
-"Valor inválido para la opción «porefs» («%s» no es «full», «noline» ni "
-"«none»)."
+"Valor inválido para la opción «porefs» («%s» no es «full», «counter», "
+"«noline» ni «none»)."
 
 #: ../../lib/Locale/Po4a/Po.pm:253
 msgid "Please provide a non-null filename"
