Upgraded po4a to r2604.

--- a/src/bin/po4a/README
+++ b/src/bin/po4a/README
@@ -60,6 +60,14 @@ SGML MODULE SPECIFIC DEPENDENCIES
     http://www.jclark.com/sp/
 
 
+TEXT MODULE SPECIFIC DEPENDENCIES
+
+  Unicode::GCSprint:
+    This module is used to compute text width; it is needed by AsciiDoc to
+    determine two line titles in encodings different from ASCII.
+    http://hatuka.nezumi.nu/repos/Unicode-LineBreak/
+
+
 PROJECT WEB PAGE
 
 You can find more information and report bugs at the po4a project web page:
@@ -72,7 +80,7 @@ COPYRIGHT AND LICENSE
 This program is free software; you may redistribute it and/or modify it
 under the terms of GPL (see COPYING file).
        
-Copyright (C) 2002-2O10 by SPI, inc.
+Copyright (C) 2002-2O12 by SPI, inc.
 Authors:
         Denis Barbier <barbier@linuxfr.org>
         Martin Quinson (mquinson#debian.org)
