Upgraded po4a to revision 2634.

--- a/src/bin/po4a/po/bin/cs.po
+++ b/src/bin/po4a/po/bin/cs.po
@@ -1,14 +1,14 @@
 # Czech translation of po4a
 # This file is distributed under the same license as the po4a package.
 # Vlastimil Skacel, 2005.
-# Michal Simunek <michal.simunek@gmail.com>, 2009 - 2010.
+# Michal Simunek <michal.simunek@gmail.com>, 2009 - 2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: po4a 0.41-1\n"
+"Project-Id-Version: po4a 0.43-1\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2010-11-23 14:31+0100\n"
+"PO-Revision-Date: 2012-10-06 14:31+0200\n"
 "Last-Translator: Michal Simunek <michal.simunek@gmail.com>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "Language: cs\n"
@@ -333,16 +333,12 @@ msgid "Begin of a new entry before the end of previous one"
 msgstr "Začátek následujícího záznamu před ukončením předcházejícího"
 
 #: ../../lib/Locale/Po4a/Po.pm:196
-#, fuzzy, perl-format
-#| msgid ""
-#| "Invalid value for option 'porefs' ('%s' is not one of 'full', 'noline' or "
-#| "'none')"
 msgid ""
 "Invalid value for option 'porefs' ('%s' is not one of 'full', 'counter', "
 "'noline' or 'none')"
 msgstr ""
 "Nesprávná hodnota volby 'porefs' (hodnota '%s' není jednou z 'full', "
-"'noline' nebo 'none')"
+"'counter', 'noline' nebo 'none')"
 
 #: ../../lib/Locale/Po4a/Po.pm:253
 msgid "Please provide a non-null filename"
@@ -705,6 +701,8 @@ msgid ""
 "Detection of two line titles failed at %s\n"
 "Install the Unicode::GCString module!"
 msgstr ""
+"U %s selhalo rozpoznávání dvouřádkových nadpisů\n"
+"Nainstalujte modul Unicode::GCString!"
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
@@ -1269,58 +1267,3 @@ msgstr "Zpracovávám $l překlady pro $file (5). . ."
 #, sh-format
 msgid "Processing $l translations for $file (7). . ."
 msgstr "Zpracovávám $l překlady pro $file (7). . ."
-
-#~ msgid "Can't copy %s to %s: %s."
-#~ msgstr "Nelze zkopírovat %s do %s: %s."
-
-#~ msgid "Can't create a temporary xml file: %s"
-#~ msgstr "Nelze vytvořit dočasný xml soubor: %s"
-
-#~ msgid "Can't create a temporary pot file: %s"
-#~ msgstr "Nelze vytvořit dočasný soubor pot: %s"
-
-#~ msgid "'%s' died with signal %d, "
-#~ msgstr "'%s' odumřel se signálem %d, s výpisem jádra."
-
-#~ msgid ""
-#~ "Escaped space at the end of macro arg. With high probability, it won't do "
-#~ "the trick with po4a (because of wrapping). You may want to remove it and "
-#~ "use the .nf/.fi groff macro to control the wrapping."
-#~ msgstr ""
-#~ "Vynucená mezera na konci argumentu makra: Velice pravděpodobně toto "
-#~ "nebude fungovat s po4a (kvůli zalamování). Pravděpodobně budete chtít "
-#~ "tuto mezeru odstranit a použít makro groffu .nf/.fi pro řízení zalamování."
-
-#~ msgid "Bad document type. '%s' expected."
-#~ msgstr "Špatný typ dokumentu. Byl očekáván '%s'."
-
-#~ msgid "Can't run nsgmls -p: %s"
-#~ msgstr "Nemohu spustit nsgmls: %s"
-
-#~ msgid "Unknown function (%s) for '%s'"
-#~ msgstr "Neznámý příkaz: '%s'"
-
-#~ msgid "can't close %s: %s"
-#~ msgstr "Nemohu uzavřít dočasný soubor: %s"
-
-#~ msgid "%s: Unknown tag %s"
-#~ msgstr "%s: Neznámá značka %s"
-
-#~ msgid "%s: Unknown SGML event type: %s"
-#~ msgstr "Neznámý formát: %s."
-
-#~ msgid ""
-#~ "This page seems to be a mdoc(7) formatted one. This is not supported "
-#~ "(yet)."
-#~ msgstr ""
-#~ "Zdá se, že tato stránka je ve formáru mdoc(7). Tento formát není "
-#~ "podporován (zatím)."
-
-#~ msgid ""
-#~ "Warning: nsgmls is missing or non-functional.  Please make sure that "
-#~ "nsgmls is present and does not produce any error (with the -wno-valid "
-#~ "option), and report a bug otherwise.  Continuing..."
-#~ msgstr ""
-#~ "Varování: nsgmls chybí nebo není funkční. Ujistěte se prosím, že je "
-#~ "nsgmls přítomno a neprodukuje žádné chyby (pomocí parametru -wno-valid), "
-#~ "a v tom případě nahlašte chybu. Pokračuji..."
