--- a/src/bin/po4a/po/bin/de.po
+++ b/src/bin/po4a/po/bin/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: po4a 0.41-1\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2012-09-22 16:46+0200\n"
+"PO-Revision-Date: 2012-10-05 22:32+0200\n"
 "Last-Translator: Thomas Müller <thomas.mueller@tmit.eu>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -726,6 +726,8 @@ msgid ""
 "Detection of two line titles failed at %s\n"
 "Install the Unicode::GCString module!"
 msgstr ""
+"Erkennung von zwei Zeilentiteln fehlgeschlagen bei %s\n"
+"Installieren Sie das Modul Unicode::GCString!"
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
