--- a/src/bin/po4a/po/bin/es.po
+++ b/src/bin/po4a/po/bin/es.po
@@ -23,10 +23,10 @@
 # #
 msgid ""
 msgstr ""
-"Project-Id-Version: po4a bin 0.39\n"
+"Project-Id-Version: po4a bin 0.43\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2012-09-26 21:54+0200\n"
+"PO-Revision-Date: 2012-10-06 11:49+0200\n"
 "Last-Translator: Omar Campagne <ocampagne@gmail.com>\n"
 "Language-Team: Debian l10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "Language: es\n"
@@ -733,6 +733,8 @@ msgid ""
 "Detection of two line titles failed at %s\n"
 "Install the Unicode::GCString module!"
 msgstr ""
+"Fallo al detectar dos títulos de línea en %s\n"
+"Instale el módulo Unicode::GCString module."
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
