--- a/src/bin/po4a/po/bin/ko.po
+++ b/src/bin/po4a/po/bin/ko.po
@@ -1,21 +1,24 @@
 # Korean translation for po4a
 # Copyright (c) 2006 Rosetta Contributors and Canonical Ltd 2006
 # This file is distributed under the same license as the po4a package.
-# Aero <chahkang@gmail.com>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: po4a\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2007-08-12 21:47+0200\n"
-"Last-Translator: Aero <chahkang@gmail.com>\n"
+"PO-Revision-Date: 2012-10-05 21:59-0600\n"
+"Last-Translator: Chel Hee Lee <gnustats@gmail.com>\n"
 "Language-Team: Korean <debian-l10n-korean@lists.debian.org>\n"
 "Language: ko\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Rosetta-Export-Date: 2007-08-12 16:08:11+0000\n"
+"Plural-Forms: nplurals=1; plural=0\n"
+"X-Poedit-Language: Korean\n"
+"X-Poedit-Country: KOREA, REPUBLIC OF\n"
+"X-Poedit-SourceCharset: utf-8\n"
 
 #: ../../lib/Locale/Po4a/Chooser.pm:26
 msgid "Need to provide a module name"
@@ -41,19 +44,17 @@ msgid "dia: uncompressed Dia diagrams."
 msgstr "dia: 압축되지 않은  Dia 다이아그램."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:61
-#, fuzzy
 msgid "docbook: DocBook XML."
-msgstr "docbook: Docbook XML."
+msgstr "docbook: DocBook XML."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:62
-#, fuzzy
 msgid "guide: Gentoo Linux's XML documentation format."
-msgstr "guide: Gentoo Linux의 xml 문서 형식."
+msgstr "guide: 젠투 리눅스의 XML 문서형식입니다."
 
 #. ."\n  - ".gettext("html: HTML documents (EXPERIMENTAL).")
 #: ../../lib/Locale/Po4a/Chooser.pm:64
 msgid "ini: INI format."
-msgstr ""
+msgstr "ini: INI 형식입니다."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:65
 msgid "kernelhelp: Help messages of each kernel compilation option."
@@ -72,14 +73,12 @@ msgid "pod: Perl Online Documentation format."
 msgstr "pod: Good old manual page format."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:69
-#, fuzzy
 msgid "sgml: either DebianDoc or DocBook DTD."
-msgstr "sgml: debiandoc 또는 docbook DTD 어느 한 쪽."
+msgstr "sgml: either DebianDoc or DocBook DTD."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:70
-#, fuzzy
 msgid "texinfo: The info page format."
-msgstr "latex: LaTeX 형식."
+msgstr "texinfo: 인포페이지 형식입니다."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:71
 msgid "tex: generic TeX documents (see also latex)."
@@ -87,15 +86,15 @@ msgstr ""
 
 #: ../../lib/Locale/Po4a/Chooser.pm:72
 msgid "text: simple text document."
-msgstr ""
+msgstr "text: 단순한 텍스트 문서입니다."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:73
 msgid "wml: WML documents."
-msgstr ""
+msgstr "wml: WML 문서입니다."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:74
 msgid "xhtml: XHTML documents."
-msgstr ""
+msgstr "xhtml: XHTML 문서입니다."
 
 #: ../../lib/Locale/Po4a/Chooser.pm:75
 msgid "xml: generic XML documents (see also docbook)."
@@ -152,13 +151,12 @@ msgid "Invalid 'unknown_macros' value. Must be one of:\n"
 msgstr ""
 
 #: ../../lib/Locale/Po4a/Man.pm:655
-#, fuzzy
 msgid ""
 "This file was generated with Pod::Man. Translate the POD file with the pod "
 "module of po4a."
 msgstr ""
-"이 파일은 Pod::Man으로 생성되었습니다. po4a의 pod 모듈로 pod 파일을 번역하세"
-"요."
+"이 파일은 Pod::Man에 의하여 생성되었습니다. po4a의 pod 모듈을 이용하여 POD 파"
+"일을 번역하세요."
 
 #: ../../lib/Locale/Po4a/Man.pm:658
 msgid ""
@@ -169,40 +167,37 @@ msgstr ""
 "요."
 
 #: ../../lib/Locale/Po4a/Man.pm:660
-#, fuzzy
 msgid ""
 "This file was generated with docbook-to-man. Translate the source file with "
 "the sgml module of po4a."
 msgstr ""
-"이 파일은 Pod::Man으로 생성되었습니다. po4a의 pod 모듈로 pod 파일을 번역하세"
-"요."
+"이 파일은 docbook-to-man을 이용하여 생성되었습니다. po4a의 sgml 모듈을 이용하"
+"여 소스파일을 번역하세요."
 
 #: ../../lib/Locale/Po4a/Man.pm:663
-#, fuzzy
 msgid ""
 "This file was generated with docbook2man. Translate the source file with the "
 "sgml module of po4a."
 msgstr ""
-"이 파일은 Pod::Man으로 생성되었습니다. po4a의 pod 모듈로 pod 파일을 번역하세"
-"요."
+"이 파일은 dobook2man을 이용하여 생성되었습니다. po4a의 모듈 sgml을 이용하여 "
+"소스파일을 번역하세요."
 
 #: ../../lib/Locale/Po4a/Man.pm:667 ../../lib/Locale/Po4a/Man.pm:675
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "This file was generated with %s. You should translate the source file, but "
 "continuing anyway."
 msgstr ""
-"이 파일은 help2man으로 생성되었습니다. 일반적인 gettext로 소스파일을 번역하세"
-"요."
+"This file was generated with %s. You should translate the source file, but "
+"continuing anyway."
 
 #: ../../lib/Locale/Po4a/Man.pm:671
-#, fuzzy
 msgid ""
 "This file was generated with db2man.xsl. Translate the source file with the "
 "xml module of po4a."
 msgstr ""
-"이 파일은 Pod::Man으로 생성되었습니다. po4a의 pod 모듈로 pod 파일을 번역하세"
-"요."
+"이 파일은 db2man.xsl를 이용하여 번역되었습니다. po4a의 xml 모듈을 이용하여 소"
+"스파일을 번역하세요."
 
 #: ../../lib/Locale/Po4a/Man.pm:681
 #, perl-format
@@ -319,9 +314,8 @@ msgid ""
 msgstr ""
 
 #: ../../lib/Locale/Po4a/Po.pm:253
-#, fuzzy
 msgid "Please provide a non-null filename"
-msgstr "모듈의 이름이 필요합니다."
+msgstr "Please provide a non-null filename"
 
 #: ../../lib/Locale/Po4a/Po.pm:265 ../../lib/Locale/Po4a/TeX.pm:930
 #: ../../lib/Locale/Po4a/TransTractor.pm:414
@@ -329,7 +323,7 @@ msgstr "모듈의 이름이 필요합니다."
 #: ../../lib/Locale/Po4a/Xhtml.pm:132 ../../lib/Locale/Po4a/Xml.pm:113
 #, perl-format
 msgid "Can't read from %s: %s"
-msgstr ""
+msgstr "%s으로부터 읽어들일 수 없습니다: %s"
 
 #: ../../lib/Locale/Po4a/Po.pm:340
 msgid "Messages with more than 2 plural forms are not supported."
@@ -343,12 +337,12 @@ msgstr ""
 #: ../../lib/Locale/Po4a/Po.pm:408 ../../lib/Locale/Po4a/Po.pm:571
 #: ../../lib/Locale/Po4a/TransTractor.pm:449
 msgid "Can't write to a file without filename"
-msgstr ""
+msgstr "파일명 없이 파일에 작성할 수 없습니다"
 
 #: ../../lib/Locale/Po4a/Po.pm:425 ../../lib/Locale/Po4a/TransTractor.pm:464
 #, perl-format
 msgid "Can't write to %s: %s"
-msgstr ""
+msgstr "%s에 기록할 수 없습니다: %s"
 
 #: ../../lib/Locale/Po4a/Po.pm:504
 msgid "Can't write PO files with more than two plural forms."
@@ -464,7 +458,7 @@ msgstr ""
 #: ../../lib/Locale/Po4a/Sgml.pm:383 ../../lib/Locale/Po4a/Sgml.pm:806
 #, perl-format
 msgid "Can't close tempfile: %s"
-msgstr ""
+msgstr "임시 파일 %s를 닫을 수 없습니다"
 
 #: ../../lib/Locale/Po4a/Sgml.pm:387
 msgid ""
@@ -512,9 +506,9 @@ msgid "Can't run nsgmls: %s"
 msgstr ""
 
 #: ../../lib/Locale/Po4a/Sgml.pm:927
-#, fuzzy, perl-format
+#, perl-format
 msgid "Unknown tag %s"
-msgstr "알 수 없는 옵션: %s"
+msgstr "알 수 없는 태그 %s"
 
 #: ../../lib/Locale/Po4a/Sgml.pm:961
 #, perl-format
@@ -527,9 +521,9 @@ msgid "Closing tag for a translation container missing before %s"
 msgstr ""
 
 #: ../../lib/Locale/Po4a/Sgml.pm:1177
-#, fuzzy, perl-format
+#, perl-format
 msgid "Unknown SGML event type: %s"
-msgstr "알 수 없는 포멧 형태: %s."
+msgstr "알 수 없는 SGML 이벤트 유형: %s"
 
 #: ../../lib/Locale/Po4a/Sgml.pm:1186
 msgid ""
@@ -550,13 +544,13 @@ msgid "Error while checking the number of arguments of the '%s' command: %s"
 msgstr ""
 
 #: ../../lib/Locale/Po4a/TeX.pm:777 ../../lib/Locale/Po4a/TeX.pm:878
-#, fuzzy, perl-format
+#, perl-format
 msgid "Unknown command: '%s'"
-msgstr "알 수 없는 옵션: %s"
+msgstr "알 수 없는 명령어: '%s'"
 
 #: ../../lib/Locale/Po4a/TeX.pm:924 ../../lib/Locale/Po4a/TransTractor.pm:410
 msgid "Can't read from file without having a filename"
-msgstr ""
+msgstr "파일명을 가지지 않는 파일로부터 읽어 올 수 없습니다"
 
 #: ../../lib/Locale/Po4a/TeX.pm:965
 #, perl-format
@@ -572,13 +566,13 @@ msgstr ""
 #: ../../lib/Locale/Po4a/TeX.pm:1023
 #, perl-format
 msgid "kpsewhich cannot find %s"
-msgstr ""
+msgstr "kpsewhich cannot find %s"
 
 #: ../../lib/Locale/Po4a/TeX.pm:1033 ../../po4a:807 ../../po4a:998
 #: ../../po4a-translate:264
 #, perl-format
 msgid "Can't open %s: %s"
-msgstr ""
+msgstr "%s을 열 수 없습니다: %s"
 
 #: ../../lib/Locale/Po4a/TeX.pm:1071
 #, perl-format
@@ -593,9 +587,9 @@ msgid ""
 msgstr ""
 
 #: ../../lib/Locale/Po4a/TeX.pm:1281 ../../lib/Locale/Po4a/TeX.pm:1543
-#, fuzzy, perl-format
+#, perl-format
 msgid "unknown environment: '%s'"
-msgstr "알 수 없는 옵션: %s"
+msgstr "알 수 없는 환경: '%s'"
 
 #: ../../lib/Locale/Po4a/TeX.pm:1304
 #, perl-format
@@ -615,7 +609,7 @@ msgstr ""
 #: ../../lib/Locale/Po4a/TeX.pm:1369 ../../lib/Locale/Po4a/TeX.pm:1484
 #, perl-format
 msgid "Command '%s': %s"
-msgstr ""
+msgstr "명령 '%s': %s"
 
 #: ../../lib/Locale/Po4a/TeX.pm:1425
 #, perl-format
@@ -636,12 +630,12 @@ msgstr ""
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
 msgid "Can't close %s after writing: %s"
-msgstr ""
+msgstr "%2$s을 작성한 뒤에 %1$s을 닫을 수 없습니다"
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:552
 #, perl-format
 msgid "Can't read po4a header from %s."
-msgstr ""
+msgstr "%s로부터 po4a 헤더를 읽을 수 없습니다."
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:557
 #, perl-format
@@ -656,7 +650,7 @@ msgstr ""
 #: ../../lib/Locale/Po4a/TransTractor.pm:576
 #, perl-format
 msgid "Invalid argument in the po4a header of %s: %s"
-msgstr ""
+msgstr "po4a의 헤더 %s에서 인식할 수 없는 인수 %s입니다"
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:582
 #, perl-format
@@ -808,7 +802,7 @@ msgstr ""
 #: ../../po4a:774
 #, perl-format
 msgid "failed to execute '%s': %s."
-msgstr ""
+msgstr "'%s'을 실행하는데 실패했습니다: %s."
 
 #: ../../po4a:778
 #, perl-format
@@ -828,7 +822,7 @@ msgstr ""
 #: ../../po4a:791
 #, perl-format
 msgid "Error: %s"
-msgstr ""
+msgstr "에러: %s"
 
 #. Check file existence
 #: ../../po4a:797 ../../po4a-gettextize:229 ../../po4a-normalize:155
@@ -836,17 +830,17 @@ msgstr ""
 #: ../../scripts/msguntypot:164 ../../scripts/msguntypot:166
 #, perl-format
 msgid "File %s does not exist."
-msgstr ""
+msgstr "파일 %s는 존재하지 않습니다."
 
 #: ../../po4a:820 ../../po4a:1009
-#, fuzzy, perl-format
+#, perl-format
 msgid "Unknown variable: %s"
-msgstr "알 수 없는 옵션: %s"
+msgstr "알 수 없는 변수: %s"
 
 #: ../../po4a:830
-#, fuzzy, perl-format
+#, perl-format
 msgid "Syntax error: %s"
-msgstr "문법 오류"
+msgstr "문법 오류: %s"
 
 #: ../../po4a:858 ../../po4a:870
 #, perl-format
@@ -864,27 +858,27 @@ msgstr ""
 
 #: ../../po4a:879
 msgid "The POT file cannot be set twice."
-msgstr ""
+msgstr "POT 파일은 두번씩 지정될 수 없습니다."
 
 #: ../../po4a:886
 #, perl-format
 msgid "'%s' is not a directory"
-msgstr ""
+msgstr "'%s'는 디렉토리가 아닙니다"
 
 #: ../../po4a:890
 #, perl-format
 msgid "Cannot list the '%s' directory"
-msgstr ""
+msgstr "'%s'디렉토리를 나열할 수 없습니다"
 
 #: ../../po4a:901
 #, perl-format
 msgid "too many POT files: %s %s"
-msgstr ""
+msgstr "너무 많은 POT 파일들: %s %s"
 
 #: ../../po4a:911
 #, perl-format
 msgid "no PO files found in %s"
-msgstr ""
+msgstr "%s내에서 발견된 PO 파일들이 없습니다"
 
 #: ../../po4a:922
 #, perl-format
@@ -933,12 +927,12 @@ msgstr ""
 #: ../../po4a:1156 ../../po4a:1307 ../../po4a-updatepo:274
 #, perl-format
 msgid "Updating %s:"
-msgstr ""
+msgstr "%s를 갱신중입니다:"
 
 #: ../../po4a:1159 ../../po4a:1316 ../../po4a-updatepo:282
 #, perl-format
 msgid "Creating %s:"
-msgstr ""
+msgstr "%s을 생성중입니다:"
 
 #: ../../po4a:1217 ../../po4a:1247 ../../po4a:1345 ../../po4a-updatepo:256
 #, perl-format
@@ -953,7 +947,7 @@ msgstr ""
 #: ../../po4a:1256 ../../po4a:1371
 #, perl-format
 msgid "Can't create directory '%s': %s"
-msgstr ""
+msgstr "디렉토리 '%s'를 생성할 수 없습니다: %s"
 
 #: ../../po4a:1278 ../../scripts/msguntypot:203
 #, perl-format
@@ -988,7 +982,7 @@ msgstr ""
 #: ../../po4a:1534
 #, perl-format
 msgid "%s is %s%% translated (%s strings)."
-msgstr ""
+msgstr "%s는 %s%% 으로 번역되었습니다 (%s 문자열)."
 
 #: ../../po4a:1537 ../../po4a-translate:240
 #, perl-format
@@ -1015,17 +1009,17 @@ msgstr ""
 
 #: ../../po4a-updatepo:269
 msgid "done."
-msgstr ""
+msgstr "완료."
 
 #: ../../po4a-updatepo:278 ../../scripts/msguntypot:212
 #, perl-format
 msgid "Error while running msgmerge: %s"
-msgstr ""
+msgstr "메시지를 머지하는 동안 에러가 발생했습니다: %s"
 
 #: ../../po4a-updatepo:285
 #, perl-format
 msgid "Error while copying the PO file: %s"
-msgstr ""
+msgstr "PO 파일을 복사하는 동안 에러가 발생했습니다: %s"
 
 #. Argument checking
 #: ../../scripts/msguntypot:163 ../../scripts/msguntypot:165
@@ -1048,12 +1042,12 @@ msgstr ""
 #: ../../scripts/msguntypot:208
 #, perl-format
 msgid "Handling %s"
-msgstr ""
+msgstr "%s을 다루고 있습니다"
 
 #: ../../scripts/msguntypot:233
 #, perl-format
 msgid "Modified %d entries in %d files."
-msgstr ""
+msgstr "%2$d개 파일들에서 %1$d개의 항목들이 수정되었습니다."
 
 #. print out help message
 #: ../../share/po4a-build:91
@@ -1083,7 +1077,7 @@ msgstr ""
 #: ../../share/po4a-build:132
 #, sh-format
 msgid "Cannot find config file! '$FILE'"
-msgstr ""
+msgstr "설정파일을 찾을 수 없습니다! '$FILE'"
 
 #. test
 #: ../../share/po4a-build:197 ../../share/po4a-build:247
@@ -1095,70 +1089,70 @@ msgstr ""
 #: ../../share/po4a-build:258
 #, sh-format
 msgid "Processing untranslated files for $X (1). . ."
-msgstr ""
+msgstr "$X (1)에 대하여 번역되지 않은 파일들을 처리중입니다. . ."
 
 #. TRANSLATORS: $X3 contains the name of the manual page
 #: ../../share/po4a-build:265
 #, sh-format
 msgid "Processing untranslated files for $X3 (3). . ."
-msgstr ""
+msgstr "$X3 (3)에 대하여 번역되지 않은 파일들을 처리중입니다. . ."
 
 #. TRANSLATORS: $file contains the basename of the POD file
 #: ../../share/po4a-build:277
 #, sh-format
 msgid "Processing untranslated files for $file (1) . . ."
-msgstr ""
+msgstr "$file (1)에 대하여 번역되지 않은 파일들을 처리중입니다 . . ."
 
 #. TRANSLATORS: $name contains the Perl module name
 #: ../../share/po4a-build:285
 #, sh-format
 msgid "Processing untranslated files for $name (3) . . ."
-msgstr ""
+msgstr "$name (3)에 대하여 번역되지 않은 파일들을 처리중입니다 . . ."
 
 #. TRANSLATORS: $file contains the basename of the POD file
 #: ../../share/po4a-build:293
 #, sh-format
 msgid "Processing untranslated files for $file (5) . . ."
-msgstr ""
+msgstr "$file (5)에 대하여 번역되지 않은 파일들을 처리중입니다 . . ."
 
 #. TRANSLATORS: $file contains the basename of the POD file
 #: ../../share/po4a-build:307
 #, sh-format
 msgid "Processing untranslated files for $file (7) . . ."
-msgstr ""
+msgstr "$file (7)에 대하여 번역되지 않은 파일들을 처리중입니다 . . ."
 
 #. TRANSLATORS: $l contains language code, $X contains the name of the manual page
 #: ../../share/po4a-build:328
 #, sh-format
 msgid "Processing $l translations for $X (1). . ."
-msgstr ""
+msgstr "$X (1)에 대하여 $l 번역들을 처리중입니다. . ."
 
 #. TRANSLATORS: $l contains language code, $X3 contains the name of the manual page
 #: ../../share/po4a-build:337
 #, sh-format
 msgid "Processing $l translations for $X3 (3). . ."
-msgstr ""
+msgstr "$X3 (3)에 대하여 $l 번역들을 처리중입니다. . ."
 
 #. TRANSLATORS: $l contains language code, $file contains the basename of the POD file
 #: ../../share/po4a-build:351
 #, sh-format
 msgid "Processing $l translations for $file (1). . ."
-msgstr ""
+msgstr "$file (1)에 대하여 $l 번역들을 처리중입니다. . .. . ."
 
 #. TRANSLATORS: $l contains language code, $name contains the Perl module name
 #: ../../share/po4a-build:362
 #, sh-format
 msgid "Processing $l translations for $name (3). . ."
-msgstr ""
+msgstr "$name (3)에 대하여 $l 번역들을 처리중입니다. . ."
 
 #. TRANSLATORS: $l contains language code, $file contains the basename of the POD file
 #: ../../share/po4a-build:372
 #, sh-format
 msgid "Processing $l translations for $file (5). . ."
-msgstr ""
+msgstr "$file (5)에 대하여 $l 번역들을 처리중입니다. . ."
 
 #. TRANSLATORS: $l contains language code, $file contains the basename of the POD file
 #: ../../share/po4a-build:388
 #, sh-format
 msgid "Processing $l translations for $file (7). . ."
-msgstr ""
+msgstr "$file (7)에 대하여 $l 번역들을 처리중입니다. . ."
