--- a/src/bin/po4a/po/bin/sl.po
+++ b/src/bin/po4a/po/bin/sl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: po4a\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2010-11-21 12:04+0100\n"
+"PO-Revision-Date: 2012-10-06 02:56+0200\n"
 "Last-Translator: Andrej Žnidaršič <andrej.znidarsic@gmail.com>\n"
 "Language-Team: Slovenian <ubuntu-l10n-slv@lists.ubuntu.com>\n"
 "Language: sl\n"
@@ -337,16 +337,13 @@ msgid "Begin of a new entry before the end of previous one"
 msgstr "Začetek novega vnosa pred koncem predhodnega"
 
 #: ../../lib/Locale/Po4a/Po.pm:196
-#, fuzzy, perl-format
-#| msgid ""
-#| "Invalid value for option 'porefs' ('%s' is not one of 'full', 'noline' or "
-#| "'none')"
+#, perl-format
 msgid ""
 "Invalid value for option 'porefs' ('%s' is not one of 'full', 'counter', "
 "'noline' or 'none')"
 msgstr ""
-"Neveljavna vrednost za možnost 'porefs' ('%s' ni ena od 'full', 'noline' ali "
-"'none')"
+"Neveljavna vrednost za možnost 'porefs' ('%s' ni ena od 'full', 'counter', "
+"'noline' ali 'none')"
 
 #: ../../lib/Locale/Po4a/Po.pm:253
 msgid "Please provide a non-null filename"
@@ -708,6 +705,8 @@ msgid ""
 "Detection of two line titles failed at %s\n"
 "Install the Unicode::GCString module!"
 msgstr ""
+"Zaznavanje dveh naslovov vrstic je spodletelo pri %s\n"
+"Namestite modul Unicode::GCString!"
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
