--- a/src/bin/po4a/po/bin/fr.po
+++ b/src/bin/po4a/po/bin/fr.po
@@ -3,20 +3,20 @@
 #
 # Martin Quinson <Martin.Quinson@tuxfamily.org>, 2002.
 # Nicolas François <nicolas.francois@centraliens.net>, 2002-2009.
-# David Prévot <david@tilapin.org>, 2010.
+# David Prévot <david@tilapin.org>, 2010, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: po4a bin\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2010-11-19 18:27-0400\n"
+"PO-Revision-Date: 2012-10-03 20:24-0400\n"
 "Last-Translator: David Prévot <david@tilapin.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.0\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../../lib/Locale/Po4a/Chooser.pm:26
@@ -336,16 +336,13 @@ msgid "Begin of a new entry before the end of previous one"
 msgstr "Début d'une nouvelle entrée avant la fin de la précédente."
 
 #: ../../lib/Locale/Po4a/Po.pm:196
-#, fuzzy, perl-format
-#| msgid ""
-#| "Invalid value for option 'porefs' ('%s' is not one of 'full', 'noline' or "
-#| "'none')"
+#, perl-format
 msgid ""
 "Invalid value for option 'porefs' ('%s' is not one of 'full', 'counter', "
 "'noline' or 'none')"
 msgstr ""
 "Valeur non valable pour l'option « porefs » (« %s » n'est ni « full », ni "
-"« noline » ni « none »)."
+"« counter », ni « noline » ni « none »)."
 
 #: ../../lib/Locale/Po4a/Po.pm:253
 msgid "Please provide a non-null filename"
@@ -722,6 +719,8 @@ msgid ""
 "Detection of two line titles failed at %s\n"
 "Install the Unicode::GCString module!"
 msgstr ""
+"Échec de détection des titres sur deux lignes en %s\n"
+"Veuillez installer le module Unicode::GCString."
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
