--- a/src/bin/po4a/po/bin/uk.po
+++ b/src/bin/po4a/po/bin/uk.po
@@ -2,15 +2,15 @@
 # This file is distributed under the same license as the po4a package.
 #
 # Sergey Dimchenko, 2005.
-# Yuri Chornoivan <yurchor@ukr.net>, 2010.
+# Yuri Chornoivan <yurchor@ukr.net>, 2010, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: po4a\n"
 "Report-Msgid-Bugs-To: po4a@packages.debian.org\n"
 "POT-Creation-Date: 2012-10-01 01:30+0200\n"
-"PO-Revision-Date: 2010-11-20 12:30+0200\n"
+"PO-Revision-Date: 2012-10-06 15:24+0300\n"
 "Last-Translator: Yuri Chornoivan <yurchor@ukr.net>\n"
-"Language-Team: Ukrainian <translation@linux.org.ua>\n"
+"Language-Team: Ukrainian <kde-i18n-uk@kde.org>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +18,7 @@ msgstr ""
 "X-Rosetta-Version: 0.1\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2\n"
-"X-Generator: Lokalize 1.1\n"
+"X-Generator: Lokalize 1.5\n"
 
 #: ../../lib/Locale/Po4a/Chooser.pm:26
 msgid "Need to provide a module name"
@@ -342,16 +342,13 @@ msgid "Begin of a new entry before the end of previous one"
 msgstr "Початок нового запису до завершення попереднього"
 
 #: ../../lib/Locale/Po4a/Po.pm:196
-#, fuzzy, perl-format
-#| msgid ""
-#| "Invalid value for option 'porefs' ('%s' is not one of 'full', 'noline' or "
-#| "'none')"
+#, perl-format
 msgid ""
 "Invalid value for option 'porefs' ('%s' is not one of 'full', 'counter', "
 "'noline' or 'none')"
 msgstr ""
 "Некоректне значення параметра «porefs» («%s» має значення, відмінне від "
-"«full», «noline» або «none»)"
+"«full», «counter», «noline» або «none»)"
 
 #: ../../lib/Locale/Po4a/Po.pm:253
 msgid "Please provide a non-null filename"
@@ -727,6 +724,8 @@ msgid ""
 "Detection of two line titles failed at %s\n"
 "Install the Unicode::GCString module!"
 msgstr ""
+"Спроба виявлення дворядкових заголовків зазнала невдачі, %s\n"
+"Встановіть модуль Unicode::GCString!"
 
 #: ../../lib/Locale/Po4a/TransTractor.pm:471
 #, perl-format
